--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -113,6 +113,47 @@
         "CONTACTS_LIST": {
           "LOCATION": "София,улица 'Професор Христо Вакарелски' 11А"
         }
+      },
+      "OTHERS": {
+        "TITLE": "Други",
+        "FAQ": "Често задавани въпроси",
+        "TERMS": "Обши условия",
+        "GDPR": "GDPR"
+      }
+    },
+    "OTHER": {
+      "TERMS_CONDITIONS": {
+        "TITLE": "Общи условия",
+        "PARAGRAPH": "Настоящите Общи условия уреждат отношенията между {{studioName}} и потребителите на неговите услуги.",
+        "TERMS": {
+          "TERMS_TITLE1": "1. Записване на резервации",
+          "1_1": "1.1 Участие в тренировките е възможно само с предварително запитване през сайта на студиото, телефон или на място.",
+          "1_2": "1.2 Всяко запитване следва да бъде потвърдено от студиото.",
+          "1_3": "1.3 Клиентът е длъжен да пристигне минимум 5 минути преди началото на часа.",
+          "1_4": "1.4 При закъснение над 10 минути инструкторът има право да не допусне клиента до тренировката.",
+          "TERMS_TITLE2": "2. Отмяна и промени на резервации",
+          "2_1": "2.1 Клиентът може да отмени тренировка не по-късно от 3 часа.",
+          "2_2": "2.2 При неспазване на срока за отказ, посещението се счита за използвано.",
+          "2_3": "2.3 Студиото си запазва правото да прави промени в графика и/или да отменя занятия при извънредни обстоятелства (болест на инструктора, технически причини и др.)",
+          "TERMS_TITLE3": "3. Абонаменти и плащания",
+          "3_1": "3.1 Плащането на услугите се извършват предварително на място.",
+          "3_2": "3.2 Закупените тренировки и карти са лични и не могат да преотстъпват.",
+          "3_3": "3.3 Неизползваните посещения в рамките на срока на картата не могат да се компенсират.",
+          "TERMS_TITLE4": "4. Здравен статус и отговорност",
+          "4_1": "4.1 Клиентът декларира, че е в добро здравословно състояние и може да участва в тренировките.",
+          "4_2": "4.2 Студиото не носи отговорност за травми, възникнали по време на тренировката, поради неспазване на указанията на инструктора.",
+          "4_3": "4.3 При наличните на здравословни проблеми, клиентът е длъжен да информира инструктора преди започване на тренировката.",
+          "TERMS_TITLE5": "5. Поведение и дисциплина",
+          "5_1": "5.1 Клиентите са длъжни да спазват и поддържат чистотата в студиото, както и да показват уважително отношение към персонала и другите клиенти.",
+          "5_2": "5.2 Забранен е достъпът на лица, които се намират в нетрезво състояние и, които са под влиянието на опиати.",
+          "5_3": "5.3 Студиото си запазва правото да отказва достъп на лица, нарушаващи реда и застрашаващи безопасността на останалите клиенти.",
+          "TERMS_TITLE6": "6. Лични данни",
+          "6_1": "6.1 Студиото обработва личните данни съгласно Закона за защита на личните данни и GDPR.",
+          "6_2": "6.2 Данните се използват единствено за целите на резервации, комуникация и маркетинг след изричното съгласие на клиента.",
+          "TERMS_TITLE7": "7. Заключителни разпоредби",
+          "7_1": "7.1 Студиото си запазва правото да променя настоящите Общи условия.",
+          "7_2": "7.2 Използването на услугите на студиото се счита за съгласие с настоящите Общи условия."
+        }
       }
     }
   }
