--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -156,6 +156,55 @@
           "7_1": "7.1 Студиото си запазва правото да променя настоящите Общи условия.",
           "7_2": "7.2 Използването на услугите на студиото се счита за съгласие с настоящите Общи условия."
         }
+      },
+      "GDPR": {
+        "TITLE": "Политика за защита на личните данни",
+        "PARAGRAPH": "Съгласно регламент (ЕС) 2016/679",
+        "BLOCKS": {
+          "GDPR_TITLE1": "1. Обща информация ",
+          "1_1": "1.1 Настоящата политика има за цел да информира клиентите на ReformFlow Studio относно начина, по който събираме, съхраняваме и обработваме личните им данни.",
+          "GDPR_TITLE2": "2. Какви лични данни събираме",
+          "2_1": "2.1 В зависимост от използваните услуги можем да събираме следните категории данни:",
+          "2_1_1": "- Име и фамилия",
+          "2_1_2": "- Телефонен номер",
+          "2_1_3": "- Имейл адрес ",
+          "2_1_4": "- Информация за здравословното състояние",
+          "2_1_5": "- История на резервации и посещения ",
+          "2_1_6": "- IP адрес при използване на нашия уеб сайт",
+          "GDPR_TITLE3": "3. Цели на обработката",
+          "3_1": "3.1 Личните данни се събират и използват за следните цели:",
+          "3_1_1": "- Управление на резервации и абонаменти",
+          "3_1_2": "- Комуникация с клиенти относно график, промени и събития",
+          "3_1_3": "- Подобряване на услугите и клиентското обслужване",
+          "3_1_4": "- Спазване на законовите задължения",
+          "GDPR_TITLE4": "4. Правно основание",
+          "4_1": "4.1 Обработката на данни се основава на:",
+          "4_1_1": "- Предоставяне на услугата",
+          "4_1_2": "- Законови задължения",
+          "4_1_3": "- Съгласие на клиента",
+          "4_1_4": "- Подобряване на услугите",
+          "GDPR_TITLE5": "5. Съхранение на личните данни",
+          "5_1": "5.1 Личните данни се съхраняват за период, не по-дълъг от необходимия за изпълнение на целите на обработката:",
+          "5_1_1": "- Данни за резервации (1 година)",
+          "5_1_2": "- Данни за здравето (само по време на активен абонамент или необходимост)",
+          "5_1_3": "- Счетоводни документи (до 10 години съгласно Закона за счетоводството)",
+          "GDPR_TITLE6": "6. Споделяне на лични данни ",
+          "6_1": "6.1 Не се предоставят лични данни на трети страни, освен:",
+          "6_1_1": "- На държавни органи, когато това се изисква по закон",
+          "6_1_2": "- На доставчици на услуги – софтуер за резервации",
+          "GDPR_TITLE7": "7. Права на клиентите",
+          "7_1": "7,1 Всеки клиент има следните права:",
+          "7_1_1": "- Достъп до своите лични данни",
+          "7_1_2": "- Коригиране на неточни данни",
+          "7_1_3": "- Ограничаване на обработката",
+          "7_1_4": "- Възражение срещу обработката",
+          "7_1_5": "- Оттегляне на съгласие по всяко време",
+          "7_1_note": "*За упражняване на тези права, може да се свържете с нас по имейл.",
+          "GDPR_TITLE8": "8. Сигурност на данните",
+          "8_1": "8.1 Използваме технически и организационни мерки за защита на вашите данни.",
+          "GDPR_TITLE9": "9. Контакти",
+          "9_1": "9.1 При въпроси относно политиката за поверителност, моля свържете се с нас чрез имейл или телефон."
+        }
       }
     }
   }
