--- a/src/assets/i18n/main-en.json
+++ b/src/assets/i18n/main-en.json
@@ -156,6 +156,55 @@
           "7_1": "7.1 The studio reserves the right to amend these terms and conditions.",
           "7_2": "7.2 Use of the studio’s services implies acceptance of these terms and conditions."
         }
+      },
+      "GDPR": {
+        "TITLE": "GDPR",
+        "PARAGRAPH": "These General Terms and Conditions govern the relationship between {{studioName}} and users of its services.",
+        "BLOCKS": {
+          "GDPR_TITLE1": "1. General Information",
+          "1_1": "1.1 This policy aims to inform clients of ReformFlow Studio about how we collect, store, and process their personal data.",
+          "GDPR_TITLE2": "2. What Personal Data We Collect",
+          "2_1": "2.1 Depending on the services used, we may collect the following categories of data:",
+          "2_1_1": "- Name and surname",
+          "2_1_2": "- Phone number",
+          "2_1_3": "- Email address",
+          "2_1_4": "- Health information",
+          "2_1_5": "- Booking and visit history",
+          "2_1_6": "- IP address when using our website",
+          "GDPR_TITLE3": "3. Purposes of Processing",
+          "3_1": "3.1 Personal data is collected and used for the following purposes:",
+          "3_1_1": "- Managing bookings and subscriptions",
+          "3_1_2": "- Communicating with clients about schedules, changes, and events",
+          "3_1_3": "- Improving services and customer support",
+          "3_1_4": "- Fulfilling legal obligations",
+          "GDPR_TITLE4": "4. Legal Basis for Processing",
+          "4_1": "4.1 The processing of data is based on:",
+          "4_1_1": "- Providing the service",
+          "4_1_2": "- Legal obligations",
+          "4_1_3": "- Client's consent",
+          "4_1_4": "- Service improvement",
+          "GDPR_TITLE5": "5. Data Retention",
+          "5_1": "5.1 Personal data is stored for no longer than necessary for processing purposes:",
+          "5_1_1": "- Booking data (1 year)",
+          "5_1_2": "- Health data (only during active subscription or when necessary)",
+          "5_1_3": "- Accounting records (up to 10 years according to the Accounting Act)",
+          "GDPR_TITLE6": "6. Data Sharing",
+          "6_1": "6.1 No personal data is shared with third parties, except:",
+          "6_1_1": "- To government authorities, when required by law",
+          "6_1_2": "- To service providers – booking software",
+          "GDPR_TITLE7": "7. Clients' Rights",
+          "7_1": "7.1 Each client has the following rights:",
+          "7_1_1": "- Access to their personal data",
+          "7_1_2": "- Rectification of inaccurate data",
+          "7_1_3": "- Restriction of processing",
+          "7_1_4": "- Objection to processing",
+          "7_1_5": "- Withdrawal of consent at any time",
+          "7_1_note": "*To exercise these rights, you may contact us via email.",
+          "GDPR_TITLE8": "8. Data Security",
+          "8_1": "8.1 We use technical and organizational measures to protect your data.",
+          "GDPR_TITLE9": "9. Contacts",
+          "9_1": "9.1 For questions regarding the privacy policy, please contact us via email or phone."
+        }
       }
     }
   }
