add changes to translation keys WIP and routing

--- a/src/assets/i18n/main-en.json
+++ b/src/assets/i18n/main-en.json
@@ -150,7 +150,8 @@
           "5_2": "5.2 Access is prohibited for individuals under the influence of alcohol or drugs.",
           "5_3": "5.3 The studio reserves the right to deny access to individuals who disrupt order or endanger the safety of others.",
           "TERMS_TITLE6": "6. Personal Data",
-          "6_1": "6.1 The studio processes personal data in accordance with the Data Protection Act and GDPR.",
+          "6_1": "6.1 The studio processes personal data in accordance with the Data Protection Act and",
+          "6_1_1": "GDPR.",
           "6_2": "6.2 Data is used solely for the purposes of booking, communication, and with the client’s explicit consent.",
           "TERMS_TITLE7": "7. Final Provisions",
           "7_1": "7.1 The studio reserves the right to amend these terms and conditions.",
@@ -159,7 +160,7 @@
       },
       "GDPR": {
         "TITLE": "GDPR",
-        "PARAGRAPH": "These General Terms and Conditions govern the relationship between {{studioName}} and users of its services.",
+        "PARAGRAPH": "According to Regulation (EU) 2016/679",
         "BLOCKS": {
           "GDPR_TITLE1": "1. General Information",
           "1_1": "1.1 This policy aims to inform clients of ReformFlow Studio about how we collect, store, and process their personal data.",
