--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -150,7 +150,8 @@
           "5_2": "5.2 Забранен е достъпът на лица, които се намират в нетрезво състояние и, които са под влиянието на опиати.",
           "5_3": "5.3 Студиото си запазва правото да отказва достъп на лица, нарушаващи реда и застрашаващи безопасността на останалите клиенти.",
           "TERMS_TITLE6": "6. Лични данни",
-          "6_1": "6.1 Студиото обработва личните данни съгласно Закона за защита на личните данни и GDPR.",
+          "6_1": "6.1 Студиото обработва личните данни съгласно Закона за защита на личните данни и",
+          "6_1_1": "GDPR.",
           "6_2": "6.2 Данните се използват единствено за целите на резервации, комуникация и маркетинг след изричното съгласие на клиента.",
           "TERMS_TITLE7": "7. Заключителни разпоредби",
           "7_1": "7.1 Студиото си запазва правото да променя настоящите Общи условия.",
