--- a/src/assets/i18n/main-en.json
+++ b/src/assets/i18n/main-en.json
@@ -151,7 +151,7 @@
           "5_3": "5.3 The studio reserves the right to deny access to individuals who disrupt order or endanger the safety of others.",
           "TERMS_TITLE6": "6. Personal Data",
           "6_1": "6.1 The studio processes personal data in accordance with the Data Protection Act and",
-          "6_1_1": "GDPR.",
+          "6_1_1": "GDPR",
           "6_2": "6.2 Data is used solely for the purposes of booking, communication, and with the client’s explicit consent.",
           "TERMS_TITLE7": "7. Final Provisions",
           "7_1": "7.1 The studio reserves the right to amend these terms and conditions.",
