adjust form styling and add translation for form input fields

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -82,7 +82,21 @@
       "TITLE": "Изпратете запитване за резервация",
       "FORM": {
         "TITLE": "Резервация",
-        "SUBMIT": "Изпратете запитване"
+        "FIRST_NAME": "Първо Име",
+        "LAST_NAME": "Фимилно Име",
+        "PHONE_NUMBER": "Телефонен номер",
+        "E_MAIL": "Мейл адрес",
+        "DATE": "Изберете дата",
+        "GROUP_TRAINING": "Групова тренировка",
+        "INDIVIDUAL_TRAINING": "Индивидуална тренировка",
+        "SUBMIT": "Изпратете запитване",
+        "ERRORS": {
+          "FIRST_NAME": "Първото име трябва да съдържа най-малко 3 букви.",
+          "LAST_NAME": "Фамилното име трябва да съдържа най-малко 3 букви.",
+          "PHONE_NUMBER": "Моля въведете валиден телефонен номер.",
+          "E_MAIL": "Моля въведете валиден мейл адрес.",
+          "DATE": "Моля въведете дата."
+        }
       }
     },
     "ABOUT_US": {
