--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -118,6 +118,13 @@
         }
       ]
     },
+    "CONTACTS": {
+      "TITLE": "Контакти",
+      "CONTACTS_FORM": {
+        "TITLE": "Свържете се с нас или оставете своя коментар",
+        "SUBMIT": "Изпратете"
+      }
+    },
     "FOOTER": {
       "ABOUT_US": "За Нас",
       "ABOUT_US_DESCRIPTION": "В нашето пилатес студио вярваме в движението с цел. Сертифицираните ни инструктори са посветени на това да ви помогнат да изградите сила, гъвкавост и баланс – както на тялото, така и на ума. Независимо дали сте начинаещ или с опит, при нас ще откриете уютно пространство, което подкрепя вашето пътуване към по-здраво и грациозно „аз“.",
@@ -220,6 +227,12 @@
           "GDPR_TITLE9": "9. Контакти",
           "9_1": "9.1 При въпроси относно политиката за поверителност, моля свържете се с нас чрез имейл или телефон."
         }
+      }
+    },
+    "SHARED": {
+      "TEXTAREA": {
+        "TITLE": "Коментари",
+        "PLACEHOLDER": "Моля дайте своят коментар или обратна връзка"
       }
     }
   }
