--- a/src/assets/i18n/main-en.json
+++ b/src/assets/i18n/main-en.json
@@ -118,6 +118,13 @@
         }
       ]
     },
+    "CONTACTS": {
+      "TITLE": "Contacts",
+      "CONTACTS_FORM": {
+        "TITLE": "Contact us or give us feedback",
+        "SUBMIT": "Send"
+      }
+    },
     "FOOTER": {
       "ABOUT_US": "About Us",
       "ABOUT_US_DESCRIPTION": "At our Pilates studio, we believe in movement with purpose. Our certified instructors are passionate about helping you build strength, flexibility, and balance—both in body and mind. Whether you're a beginner or experienced, our welcoming space is here to support your journey to a healthier, more graceful you.",
@@ -220,6 +227,12 @@
           "GDPR_TITLE9": "9. Contacts",
           "9_1": "9.1 For questions regarding the privacy policy, please contact us via email or phone."
         }
+      }
+    },
+    "SHARED": {
+      "TEXTAREA": {
+        "TITLE": "Comments",
+        "PLACEHOLDER": "Please provide your comment of feedback"
       }
     }
   }
