--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -233,6 +233,10 @@
       "TEXTAREA": {
         "TITLE": "Коментари",
         "PLACEHOLDER": "Моля дайте своят коментар или обратна връзка"
+      },
+      "NAVIGATION_LINKS": {
+        "MEET_THE_INSTRUCTORS": "Запознай се с инструкторите",
+        "BOOK_A_RESERVATION": "Направете резервация"
       }
     }
   }
