adjust reservation and review services and add lazy loading for images

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -140,7 +140,7 @@
       "OTHERS": {
         "TITLE": "Други",
         "FAQ": "Често задавани въпроси",
-        "TERMS": "Обши условия",
+        "TERMS": "Общи условия",
         "GDPR": "Политика за защита на личните данни"
       }
     },
