adjust font-size for small devics in home page

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -13,6 +13,10 @@
     },
     "HOME": {
       "SUBTITLE": "Промяната в твоето тяло!",
+      "PARAGRAPH": {
+        "PART_1": "Доставяме найдобрата грижа за вашето тяло и ум, която ще бъде оценена от вашата",
+        "PART_2": "душа."
+      },
       "GET_IN_TOUCH": "Контакти",
       "MIDDLE_HEADING": "Първото усъвършенстахме себе си.",
       "MIDDLE_PARAGRAPH": "След дълго време прекарано във фитнес сферата, фокусът ни се насочи към финалното извайване.",
