--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -244,6 +244,16 @@
       "NAVIGATION_LINKS": {
         "MEET_THE_INSTRUCTORS": "Запознай се с инструкторите",
         "BOOK_A_RESERVATION": "Направете резервация"
+      },
+      "ERRORS": {
+        "MODAL": {
+          "TITLE_SUCCESS": "Успешно изпращане!",
+          "TITLE_FAILURE": "Грешка при изпращането",
+          "SUCCESS_DESCRIPTION": "Вашата заявка беше изпратена успешно, ще се свържем с вас при първа възможност!",
+          "FAILURE_DESCRIPTION": "Нещо се обърка, моля опитайте отново по-късно.",
+          "SUCCESS_REVIEW":"Благодарим за вашата обратна връзка. Мнението ви е важно за нас!",
+          "BUTTON": "Затвори"
+        }
       }
     }
   }
