adjust mail submit service to include the langague string for translation

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -90,7 +90,7 @@
       "FORM": {
         "TITLE": "Резервация",
         "FIRST_NAME": "Първо Име",
-        "LAST_NAME": "Фимилно Име",
+        "LAST_NAME": "Фамилно Име",
         "PHONE_NUMBER": "Телефонен номер",
         "E_MAIL": "Мейл адрес",
         "DATE": "Изберете дата",
