add heading for the testimonials and adjust styling

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -56,6 +56,7 @@
         ]
       },
       "GM_HEADING": "Можете да ни намерите лесно и да започнете тренировката си днес!",
+      "TESTIMONIALS_TITLE": "Отзиви",
       "PILATES_QUOTE": "Физическата форма е първото условие за щастие.",
       "JOSEPH_PILATES": "Йозеф Пилатес"
     },
