--- a/src/assets/i18n/main-en.json
+++ b/src/assets/i18n/main-en.json
@@ -56,6 +56,7 @@
         ]
       },
       "GM_HEADING": "You can easily find us and start your training today!",
+      "TESTIMONIALS_TITLE": "Testimonials",
       "PILATES_QUOTE": "Physical fitness is the first requisite of happiness.",
       "JOSEPH_PILATES": "Joseph Pilates"
     },
