add time table for working hours

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -105,6 +105,19 @@
           "E_MAIL": "Моля въведете валиден мейл адрес.",
           "DATE": "Моля въведете дата."
         }
+      },
+      "SCHEDULE": {
+        "TITLE": "Работно време",
+        "DAYS" : {
+          "TITLE": "Дни",
+          "TIME": "Време",
+          "MONDAY": "Понеделник",
+          "TUESDAY": "Вторник",
+          "WEDNESDAY": "Сряда",
+          "THURSDAY": "Четвъръък",
+          "FRIDAY": "Петък",
+          "SAT_SUN":"Събота и Неделя"
+        }
       }
     },
     "ABOUT_US": {
