adjust reservation time acceptance

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -95,6 +95,7 @@
         "PHONE_NUMBER": "Телефонен номер",
         "E_MAIL": "Мейл адрес",
         "DATE": "Изберете дата",
+        "TIME": "Изберете час",
         "GROUP_TRAINING": "Групова тренировка",
         "INDIVIDUAL_TRAINING": "Индивидуална тренировка",
         "SUBMIT": "Изпратете запитване",
