--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -104,7 +104,9 @@
           "LAST_NAME": "Фамилното име трябва да съдържа най-малко 3 букви.",
           "PHONE_NUMBER": "Моля въведете валиден телефонен номер.",
           "E_MAIL": "Моля въведете валиден мейл адрес.",
-          "DATE": "Моля въведете дата."
+          "DATE": "Моля въведете дата.",
+          "TIME": "Моля изберете час",
+          "TIME_HINT": "Моля изберете пълен час (напр. 13:00 или 14:00). Минутите не могат да бъдат зададени, тъй като сесиите започват в кръгли часове."
         }
       },
       "SCHEDULE": {
