--- a/src/assets/i18n/main-en.json
+++ b/src/assets/i18n/main-en.json
@@ -104,7 +104,9 @@
           "LAST_NAME": "Last name must be at least 3 characters.",
           "PHONE_NUMBER": "Enter a valid phone number.",
           "E_MAIL": "Enter a valid email.",
-          "DATE": "Date is required."
+          "DATE": "Date is required.",
+          "TIME": "Please select a valid hour",
+          "TIME_HINT": "Please select a full hour (e.g. 13:00, 14:00). Minutes are not allowed as the sessions start at round hours."
         }
       },
       "SCHEDULE": {
