implement nz form for contacts as well

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -105,6 +105,7 @@
           "PHONE_NUMBER": "Моля въведете валиден телефонен номер.",
           "E_MAIL": "Моля въведете валиден мейл адрес.",
           "DATE": "Моля въведете дата.",
+          "FEEDBACK": "Моля попълнете полето с вашия коментар или обратна връзка.",
           "TIME": "Моля изберете час",
           "TIME_HINT": "Моля изберете пълен час (напр. 13:00 или 14:00). Минутите не могат да бъдат зададени, тъй като сесиите започват в кръгли часове."
         }
