adjust contacts page contacts with working hours table

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -14,7 +14,7 @@
     "HOME": {
       "SUBTITLE": "Промяната в твоето тяло!",
       "PARAGRAPH": {
-        "PART_1": "Доставяме найдобрата грижа за вашето тяло и ум, която ще бъде оценена от вашата",
+        "PART_1": "Доставяме най-добрата грижа за вашето тяло и ум, която ще бъде оценена от вашата",
         "PART_2": "душа."
       },
       "GET_IN_TOUCH": "Контакти",
