fix translation text and adjust styling for intro hero

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -257,7 +257,7 @@
     "SHARED": {
       "TEXTAREA": {
         "TITLE": "Коментари",
-        "PLACEHOLDER": "Моля дайте своят коментар или обратна връзка"
+        "PLACEHOLDER": "Моля дайте своя коментар или обратна връзка"
       },
       "NAVIGATION_LINKS": {
         "MEET_THE_INSTRUCTORS": "Запознай се с инструкторите",
