--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -13,7 +13,7 @@
       }
     },
     "HOME": {
-      "SUBTITLE": "Промяната в твоето тяло!",
+      "SUBTITLE": "Промяната в твоето тяло",
       "PARAGRAPH": {
         "PART_1": "Ново предизвикателство за вашето тяло!",
         "PART_2": "душа."
@@ -21,6 +21,7 @@
       "GET_IN_TOUCH": "Контакти",
       "MIDDLE_HEADING": "Защо да ни се доверите?",
       "MIDDLE_PARAGRAPH": "а сега е вереме за Вас!",
+      "MIDDLE_DESCRIPTION": "В нашето пилатес студио вярваме в силата на осъзнатото движение. Нашите сертифицирани инструктори не само притежават задълбочени знания и опит, но и истинска страст към това да вдъхновяват и подкрепят всеки човек по пътя към вътрешна и външна хармония. С внимание към детайла и индивидуален подход, ние създаваме среда, в която тялото се укрепва, умът се успокоява, а духът се извисява. Независимо дали тепърва започвате или търсите ново предизвикателство, при нас ще откриете сигурно, уютно и вдъхновяващо място за своето по-здраво, по-силно и по-грациозно „аз“.",
       "FAQ": {
         "FAQ_TITLE": "Често задавани въпроси и отговори",
         "FAQ_LIST": [
