--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -22,6 +22,8 @@
       "MIDDLE_HEADING": "Защо да ни се доверите?",
       "MIDDLE_PARAGRAPH": "а сега е вереме за Вас!",
       "MIDDLE_DESCRIPTION": "В нашето пилатес студио вярваме в силата на осъзнатото движение. Нашите сертифицирани инструктори не само притежават задълбочени знания и опит, но и истинска страст към това да вдъхновяват и подкрепят всеки човек по пътя към вътрешна и външна хармония. С внимание към детайла и индивидуален подход, ние създаваме среда, в която тялото се укрепва, умът се успокоява, а духът се извисява. Независимо дали тепърва започвате или търсите ново предизвикателство, при нас ще откриете сигурно, уютно и вдъхновяващо място за своето по-здраво, по-силно и по-грациозно „аз“.",
+      "LAST_HERO_HEADING": "Ползи",
+      "LAST_HERO_DESCRIPTION": "Пилатесът на реформър е мощен инструмент за изграждане на сила, стабилност и контрол върху тялото. Чрез прецизното съпротивление на уреда се активират дълбоките мускули, подобрява се стойката и се намалява напрежението в ставите. Всяко движение е насочено към хармония между дишането и тялото, което води до по-добра концентрация и осъзнатост. Тренировките са подходящи за всички – от начинаещи до напреднали – и предлагат индивидуален подход според нуждите и целите ви. Това е интелигентен и ефективен начин да развиете здраво, балансирано и красиво тяло, като същевременно поддържате ума спокоен и фокусиран.",
       "FAQ": {
         "FAQ_TITLE": "Често задавани въпроси и отговори",
         "FAQ_LIST": [
@@ -261,7 +263,8 @@
       },
       "NAVIGATION_LINKS": {
         "MEET_THE_INSTRUCTORS": "Запознай се с инструкторите",
-        "BOOK_A_RESERVATION": "Направете резервация"
+        "BOOK_A_RESERVATION": "Направете резервация",
+        "LEARN_MORE": "Научи повече"
       },
       "SCHEDULE": {
         "TITLE": "Работно време",
