--- a/src/assets/i18n/main-en.json
+++ b/src/assets/i18n/main-en.json
@@ -21,6 +21,8 @@
       "GET_IN_TOUCH": "Get in Touch",
       "MIDDLE_HEADING": "Why should You put your trust in us?",
       "MIDDLE_DESCRIPTION": "At our Pilates studio, we believe in the power of mindful movement. Our certified instructors not only bring deep knowledge and experience but also a true passion for inspiring and supporting each individual on their journey to inner and outer harmony. With great attention to detail and a personalized approach, we create an environment where the body is strengthened, the mind is calmed, and the spirit is uplifted. Whether you're just beginning or seeking a new challenge, you’ll find a safe, welcoming, and inspiring space to nurture a healthier, stronger, and more graceful version of yourself.",
+      "LAST_HERO_HEADING": "Benefits",
+      "LAST_HERO_DESCRIPTION": "Reformer Pilates is a powerful method for building strength, stability, and full-body control. The machine’s refined resistance system activates deep core muscles, improves posture, and reduces impact on the joints. Each movement encourages a connection between breath and body, enhancing both focus and mindfulness. Suitable for everyone—from beginners to experienced practitioners—Reformer sessions are adaptable to your individual needs and goals. It’s a smart, effective way to cultivate a strong, balanced, and beautifully aligned body while keeping the mind calm and centered.",
         "FAQ_TITLE": "Frequently Asked Questions",
         "FAQ_LIST": [
           {
@@ -256,7 +258,8 @@
       },
       "NAVIGATION_LINKS": {
         "MEET_THE_INSTRUCTORS": "Meet the instructors",
-        "BOOK_A_RESERVATION": "Book a reservation"
+        "BOOK_A_RESERVATION": "Book a reservation",
+        "LEARN_MORE": "Learn more"
       },
       "SCHEDULE": {
         "TITLE": "Working hours",
