adjust icon in location in contact links to not shrink

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -161,7 +161,7 @@
       "CONTACTS": {
         "HEADER": "Контакти",
         "CONTACTS_LIST": {
-          "LOCATION": "улица 'Проф. Христо Вакарелски' 11А, София"
+          "LOCATION": "ул. 'Проф. Христо Вакарелски' 11А, София"
         }
       },
       "OTHERS": {
