adjust padding for footer and into hero styling

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -127,7 +127,7 @@
       }
     },
     "ABOUT_US": {
-      "MAIN-TITLE": "За нас",
+      "MAIN-TITLE": "За Нас",
       "TITLE": "Нашите инструктори",
       "АGE": "Години: ",
       "ABOUT_US_CARDS": [
