adjust font size for section title and intro hero section

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -13,9 +13,9 @@
       }
     },
     "HOME": {
-      "SUBTITLE": "Промяната в твоето тяло",
+      "SUBTITLE": "Промяната в твоето тяло!",
       "PARAGRAPH": {
-        "PART_1": "Ново предизвикателство за вашето тяло!",
+        "PART_1": "Новото предизвикателство те очаква!",
         "PART_2": "душа."
       },
       "GET_IN_TOUCH": "Контакти",
