--- a/src/assets/i18n/main-en.json
+++ b/src/assets/i18n/main-en.json
@@ -13,9 +13,9 @@
       }
     },
     "HOME": {
-      "SUBTITLE": "The change in your body",
+      "SUBTITLE": "The change in your body!",
       "PARAGRAPH": {
-        "PART_1": "New challenge for your body!",
+        "PART_1": "The new challenge awaits!",
         "PART_2": "soul."
       },
       "GET_IN_TOUCH": "Get in Touch",
